@@ -9,10 +9,10 @@ BEGIN { unshift @INC, "$FindBin::Bin/../lib" }
 use Getopt::Long qw(GetOptions :config no_auto_abbrev no_ignore_case);
 
 GetOptions
-  'f|foreground' => sub { $ENV{HYPNOTOAD_FOREGROUND} = 1 },
+  'f|foreground' => \$ENV{HYPNOTOAD_FOREGROUND},
   'h|help'       => \my $help,
-  's|stop'       => sub { $ENV{HYPNOTOAD_STOP}       = 1 },
-  't|test'       => sub { $ENV{HYPNOTOAD_TEST}       = 1 };
+  's|stop'       => \$ENV{HYPNOTOAD_STOP},
+  't|test'       => \$ENV{HYPNOTOAD_TEST};
 
 my $app = shift || $ENV{HYPNOTOAD_APP};
 if ($help || !$app) {
